# ATP-Protocol

./: .env.example  .gitignore  Dockerfile  README.md  api.py  boot.sh  client.py  client_example.py  docker-compose.yml  example.py  full_flow_example.py  launch_gunicorn.sh  pyproject.toml  requirements.txt  schemas.py  server.py  settlement_service.py
atp/: __init__.py  api.py  client.py  config.py  encryption.py  middleware.py  schemas.py  settlement_client.py  solana_utils.py  token_prices.py  utils.py  vault.py
basic_example/: client_example.py
docs/: MIDDLEWARE.md  SETTLEMENT_SERVICE.md
examples/: README.md  client_smoke_test.py  example.py  full_flow_example.py  middleware_usage_example.py  settlement_service_example.py
examples/anthropic/: README.md  server.py
examples/autogen/: README.md  client.py  server.py
examples/client/: README.md  client_example_simple.py  example_calculate_payment.py  example_health_check.py  example_parse_usage.py  example_request.py  example_settle.py
examples/crewai/: README.md  client.py
examples/server/: README.md  client_smoke_test.py  example.py
examples/swarms/: README.md  server.py
examples/tutorials/: README.md
examples/tutorials/anthropic/: TUTORIAL.md  client.py  server.py
examples/tutorials/autogen/: TUTORIAL.md  server.py
examples/tutorials/crewai/: TUTORIAL.md  server.py
examples/tutorials/langchain/: README.md  (+3 more)
papers/: paper.txt
rust_settlement_api/: Cargo.toml  SETTLEMENT_SERVICE_RUST.md  settlement_service.rs  test_api.py  test_api.sh
swarms/: client.py  server.py
tests/: tests.py
(+5 files in other folders)
