[package]
name = "atp-settlement-service"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "atp-settlement-service"
path = "settlement_service.rs"

[dependencies]
# Web framework - Axum is the modern, high-performance choice
axum = "0.8.8"
tokio = { version = "1.35", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for price fetching
reqwest = { version = "0.13.1", features = ["json"] }

# Solana SDK
solana-sdk = "3.0.0"
solana-client = "3.1.5"

# Base58 encoding/decoding
bs58 = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async runtime utilities
futures = "0.3"

# OpenAPI/Swagger support
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

